base/builds/regulus/argocd/bootstrap/cluster-access-gw/GatewayClass.cluster-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cluster-gateway
spec:
  controllerName: "gateway.envoyproxy.io/gatewayclass-controller"
