base/builds/regulus/argocd/bootstrap/cluster-access-gw/GatewayClass.plex-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: plex-direct
spec:
  controllerName: "gateway.envoyproxy.io/plex-direct-controller"
