base/builds/regulus/argocd/bootstrap/cluster-access-gw/GatewayClass.rtmp-relay.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: rtmp-relay
spec:
  controllerName: "gateway.envoyproxy.io/gatewayclass-controller"
