base/builds/regulus/argocd/bootstrap/cluster-access-gw/Gateway.cluster-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-ingress
  namespace: default
spec:
  #addresses:
  #- type: IPAddress
  #  value: 192.168.64.248
  gatewayClassName: cluster-gateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    protocol: HTTP
    port: 9080
