base/builds/regulus/argocd/bootstrap/cluster-access-gw/Gateway.plex-direct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: plex-direct
  namespace: default
  labels:
    pool: plex
spec:
  #addresses:
  #- type: IPAddress
  #  value: 192.168.64.249
  gatewayClassName: plex-direct
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    protocol: HTTP
    port: 32400
