base/builds/regulus/argocd/bootstrap/cluster-access-gw/Gateway.rtmp-relay.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rtmp-relay
  namespace: default
  labels:
    pool: rtmp
spec:
  #addresses:
  #- type: IPAddress
  #  value: 192.168.64.249
  gatewayClassName: rtmp-relay
  listeners:
  - allowedRoutes:
      kinds:
      - kind: TCPRoute
      namespaces:
        from: All
    name: hls
    protocol: TCP
    port: 1935
  - allowedRoutes:
      namespaces:
        from: All
    name: rtmp
    protocol: HTTP
    port: 8080
